# falocalrepo-server

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
falocalrepo_server/: __init__.py  __main__.py  __version__.py  database.py  functions.py  server.py
falocalrepo_server/server_templates/: journal.html  root.html  submission.html  user.html
falocalrepo_server/static/styles/: bbcode.css  icons.css  style.css
falocalrepo_server/templates/: base.j2  comments.html  error.html  head.html  info.html  journal.html  navbar.html  not_found.html  root.html  search.html  search_results.html  settings.html  submission.html  user.html
falocalrepo_server/templates/components/: cards.j2  comments.j2  icons.j2  navbar.j2  pagination.j2  tables.j2  tags.j2
falocalrepo_server/templates/pages/: error.j2  home.j2  journal.j2  journal_edit.j2  search.j2  settings.j2  submission.j2  submission_edit.j2  user.j2  user_edit.j2
