[tool.poetry]
name = "falocalrepo-server"
version = "3.3.5"
description = "Web interface for falocalrepo."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/FurryCoders/falocalrepo-server"
repository = "https://github.com/FurryCoders/falocalrepo-server"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
]

[tool.poetry.urls]
"Source" = "https://github.com/FurryCoders/falocalrepo-server"
"Changelog" = "https://github.com/FurryCoders/falocalrepo-server/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/FurryCoders/falocalrepo-server/issues"
"Download" = "https://pypi.org/project/falocalrepo-server/#files"

[tool.poetry.scripts]
falocalrepo-server = "falocalrepo_server.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
falocalrepo-database = "~5.4.5"
chardet = "^5.2.0"
pillow = "^10.0.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
Jinja2 = "^3.1.2"
click = "^8.1.7"
click-help-colors = "^0.9.2"
htmlmin = "^0.1.12"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
bbcode = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
