[tool.poetry]
name = "falocalrepo-server"
version = "3.4.1"
description = "Web interface for falocalrepo."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/FurryCoders/falocalrepo-server"
repository = "https://github.com/FurryCoders/falocalrepo-server"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
]

[tool.poetry.urls]
"Source" = "https://github.com/FurryCoders/falocalrepo-server"
"Changelog" = "https://github.com/FurryCoders/falocalrepo-server/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/FurryCoders/falocalrepo-server/issues"
"Download" = "https://pypi.org/project/falocalrepo-server/#files"

[tool.poetry.scripts]
falocalrepo-server = "falocalrepo_server.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
falocalrepo-database = "~5.4.6"
chardet = "^5.2.0"
pillow = "^11.1.0"
starlette = "^0.45.2"
uvicorn = "^0.34.0"
Jinja2 = "^3.1.4"
click = "^8.1.8"
click-help-colors = "^0.9.4"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
bbcode = "^1.1.0"
itsdangerous = "^2.2.0"
orjson = "^3.10.14"
baize = "^0.22.2"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api"
