[tool.poetry]
name = "falocalrepo-server"
version = "3.4.3"
description = "Web interface for falocalrepo."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/FurryCoders/falocalrepo-server"
repository = "https://github.com/FurryCoders/falocalrepo-server"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
]

[tool.poetry.urls]
"Source" = "https://github.com/FurryCoders/falocalrepo-server"
"Changelog" = "https://github.com/FurryCoders/falocalrepo-server/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/FurryCoders/falocalrepo-server/issues"
"Download" = "https://pypi.org/project/falocalrepo-server/#files"

[tool.poetry.scripts]
falocalrepo-server = "falocalrepo_server.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
falocalrepo-database = "~5.4.6"
chardet = "^5.2.0"
pillow = "^11.3.0"
starlette = "^0.47.3"
uvicorn = "^0.35.0"
Jinja2 = "^3.1.4"
click = "^8.1.8"
click-help-colors = "^0.9.4"
beautifulsoup4 = "^4.13.5"
lxml = "^6.0.1"
bbcode = "^1.1.0"
itsdangerous = "^2.2.0"
orjson = "^3.11.3"
baize = "^0.23.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api"
